# ocr-fastapi-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py  ocr_service.py
models/ocr_model/: README.md  config.py  config.yaml  main.py  pyproject.toml
models/ocr_model/layout/: __init__.py  pp_doclayout_v3.py
models/ocr_model/utils/: __init__.py  image_utils.py  layout_postprocess.py  stats.py
