[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "onnxruntime>=1.26.0",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.5.0",
    "paddlepaddle>=3.3.1",
    "paddlex>=3.5.1",
    "pydantic>=2.13.4",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "transformers>=5.8.0",
    "vietocr>=0.3.13",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
